<resources>
    <string name="app_name">App Portfolio</string>
    <string name="main_activity_title">My Nanodegree Apps</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="make_your_app_material">Make your app material</string>
    <string name="go_ubiquitous">Go ubiquitous</string>
    <string name="capstone">Capstone: My own app</string>
    <string name="toast_text">This button will launch my \'%s\' project</string>
</resources>
